# g1_rps_project

./: .gitignore  README.md  bridge_dual_arm.py
rock-paper-scissors/: g1_speak.sh  realsense_image_bridge.py  requirements.txt  ros_bridge.py  ros_bridge_left.py  test2_3_combined.py  test2_3_combined_left.py  test6_visual_optimisation.py
ws_G1/src/: g1_robot_base.launch.py  g1_robot_base_left.launch.py  rps_arm_controller.py  rps_arm_controller_left.py  rps_game.launch.py  rps_game_left.launch.py
ws_G1/src/DEX3-1/: unitree_dex3_left_clean.urdf  unitree_dex3_right_clean.urdf
ws_G1/src/double_arm_moveit/: CMakeLists.txt  package.xml
ws_G1/src/double_arm_moveit/launch/: g1_arm_controller.launch.py
ws_G1/src/double_arm_moveit/src/: double_arm_moveit.cpp
ws_G1/src/double_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws_G1/src/double_arm_moveit_config/config/: g1_dual_arm.ros2_control.xacro  g1_dual_arm.srdf  g1_dual_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ws_G1/src/double_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ws_G1/src/g1_arm_description/: CMakeLists.txt  package.xml
ws_G1/src/g1_arm_description/urdf/: 111.urdf  222.urdf  g1_dual_arm.gv
ws_G1/src/g1_tts/: CMakeLists.txt  package.xml
ws_G1/src/g1_tts/src/: g1_say_i_win.cpp  g1_speak.cpp
ws_G1/src/g1arm_moveit/: CMakeLists.txt  package.xml
ws_G1/src/g1arm_moveit/src/: g1arm_moveit.cpp  g1arm_moveit.cpp.backup
ws_G1/src/left_arm_description/: CMakeLists.txt  package.xml
ws_G1/src/left_arm_description/urdf/: g1_dual_arm.urdf  g1_dual_arm.urdf.bak
ws_G1/src/left_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws_G1/src/left_arm_moveit_config/config/: g1_dual_arm.ros2_control.xacro  g1_dual_arm.srdf  g1_dual_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ws_G1/src/left_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  real.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ws_G1/src/left_moveit/: CMakeLists.txt  package.xml
ws_G1/src/left_moveit/include/utils/: utils.hpp
ws_G1/src/left_moveit/src/: backup.cpp  g1_dex3_example.cpp  grasp_demo.cpp  gripper_control_backup.cpp  gripper_control_demo.cpp  gripper_test_manual.cpp  left_moveit.cpp  real_gripper_control.cpp  real_gripper_control_left.cpp  real_gripper_control_right.cpp  rps_arm_gripper_control.cpp  test_middle_finger.cpp
ws_G1/src/right_arm_description/: CMakeLists.txt  package.xml
ws_G1/src/right_arm_description/urdf/: g1_dual_arm.urdf
ws_G1/src/right_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws_G1/src/right_arm_moveit_config/config/: g1_dual_arm.ros2_control.xacro  g1_dual_arm.srdf  g1_dual_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
ws_G1/src/right_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  real.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ws_G1/src/right_moveit/: CMakeLists.txt  package.xml
ws_G1/src/right_moveit/src/: right_moveit.cpp
